--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node-fetch": "^3.3.0",
     "puppeteer": "^19.6.3",
     "sequelize": "^6.28.0",
-    "sequelize-cli": "^6.6.0"
+    "sequelize-cli": "^6.6.0",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.2/xlsx-0.19.2.tgz"
   },
   "name": "databuilder",
   "type": "commonjs",
